--- a/DropboxSaver/SavingToDropbox.html
+++ b/DropboxSaver/SavingToDropbox.html
@@ -1,10 +1,8 @@
 <html>
-<head>
     <title>Save screen to Dropbox</title>
-</head>
-    <div class = "Save to Dropbox button">
-        <a href = "https://www.dropbox.com">
-        <img src="dropbox_icon.png" style="width:50px;height:50px" target = "_blank"/> 
-        </a>
-    </div>
+    
+    <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="jf8794aw7cyzc99"></script>
+    
+    <a class="dropbox-saver" id="downloadButton" /></a>
+    <script src = "getURL.js"></script>
 </html>
