--- a/LeapDrawing/draw.html
+++ b/LeapDrawing/draw.html
@@ -5,11 +5,12 @@
   <title>LeapClass</title>
   <script src="leap-0.6.2.min.js"></script>
   <script src="jquery-1.11.1.min.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="klass.js"></script>
   <link rel="stylesheet" type="text/css" href="klass.css">
   </head>
 <body>
-  <div id="status"></div>
-  <canvas id="canvas"></canvas>
+  <div id="layertop"><canvas id="canvas"></canvas></div>
+  <div id="layervideo"><div id="player"></div></div>
 </body>
 </html>
