--- a/LeapDrawing/draw.html
+++ b/LeapDrawing/draw.html
@@ -10,7 +10,21 @@
   <link rel="stylesheet" type="text/css" href="klass.css">
   </head>
 <body>
-  <div id="layertop"><canvas id="canvas"></canvas></div>
-  <div id="layervideo"><div id="player"></div></div>
+  <div id="layertop">
+    <div class="eye1">
+      <canvas id="canvas"></canvas>
+    </div>
+    <div class="eye2">
+      <canvas id="canvas2"></canvas>
+    </div>
+  </div>
+  <div id="layervideo">
+    <div class="eye1">
+      <div id="player1"></div>
+    </div>
+    <div class="eye2">
+      <div id="player2"></div>
+    </div>
+  </div>
 </body>
 </html>
