--- a/LeapDrawing/draw.html
+++ b/LeapDrawing/draw.html
@@ -7,6 +7,7 @@
   <script src="jquery-1.11.1.min.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="klass.js"></script>
+  <script src="three.min.js"></script>
   <link rel="stylesheet" type="text/css" href="klass.css">
   </head>
 <body>
