--- a/LeapDrawing/3d.html
+++ b/LeapDrawing/3d.html
@@ -5,7 +5,9 @@
   <title>LeapClass</title>
   <script src="jquery-1.11.1.min.js"></script>
   <script src="three.min.js"></script>
+  <script src="CSS3DRenderer.js"></script>
   <script src="rift.js"></script>
+  <link rel="stylesheet" type="text/css" href="klass.css">
   </head>
 <body>
 </body>
